--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
 # These owners will be the default owners for everything in the repo. Unless a
 # later match takes precedence, they will be requested for review when someone
 # opens a pull request.
-* @efbig @metachris @dvush @plroman @mempirate @thedevbirb @merklefruit @fmosterts
+* @efbig @metachris @dvush @plroman @mempirate @thedevbirb
