feat: add justfile for recurring commands; pin nightly formatter; pin toml fmt

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,8 +19,8 @@ jobs:
       - uses: dtolnay/rust-toolchain@nightly
         with:
           components: rustfmt
-      - name: Run fmt
-        run: cargo +nightly fmt --all --check
+      - run: rustup toolchain install nightly-2025-09-21 --component rustfmt
+      - run: cargo +nightly-2025-09-21 fmt --all --check
 
   clippy:
     name: clippy
