--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ publish = false
 # alloy
 alloy-primitives = { version = "1.3.1", features = ["serde"] }
 alloy-rlp = "0.3.12"
-alloy-consensus = { version = "1.0.32", features = ["k256"] }
+alloy-consensus = { version = "1.0.32", features = ["k256", "serde"] }
 alloy-eips = "1.0.32"
 alloy-signer = "1.0.32"
 alloy-signer-local = "1.0.32"
@@ -16,6 +16,9 @@ alloy-signer-local = "1.0.32"
 # revm
 revm-primitives = { version = "20.2.1", default-features = false }
 revm-interpreter = { version = "25.0.2", default-features = false }
+
+# rbuilder
+rbuilder-primitives = { git = "https://github.com/mempirate/rbuilder.git", branch = "refactor/extract-primitives" }
 
 # rt
 tokio = { version = "1", default-features = false, features = [
@@ -59,6 +62,8 @@ flate2 = { version = "1", features = ["zlib-rs"], default-features = false }
 reqwest = { version = "0.12", features = ["json"] }
 strum = "0.27"
 strum_macros = "0.27"
+# Manually override cc version (conflict between alloy-consensus and rbuilder)
+cc = "=1.2.15"
 
 [dev-dependencies]
 alloy-primitives = { version = "1.3.1", features = ["getrandom"] }
