--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,18 +18,14 @@ revm-primitives = { version = "20.2.1", default-features = false }
 revm-interpreter = { version = "25.0.2", default-features = false }
 
 # rbuilder
-<<<<<<< HEAD
 rbuilder-primitives = { git = "https://github.com/flashbots/rbuilder.git", rev = "3f14f82" }
-=======
-rbuilder-primitives = { git = "https://github.com/mempirate/rbuilder.git", branch = "refactor/extract-primitives" }
->>>>>>> 1b5d8b8 (refactor: use rbuilder-primitives)
 
 # rt
 tokio = { version = "1", default-features = false, features = [
-    "sync",
-    "time",
-    "rt-multi-thread",
-    "macros",
+  "sync",
+  "time",
+  "rt-multi-thread",
+  "macros"
 ] }
 futures = "0.3"
 
@@ -43,16 +39,17 @@ metrics-derive = "0.1"
 metrics-process = "2.4.0"
 metrics-util = "0.20.0"
 metrics-exporter-prometheus = { version = "0.17.2", default-features = false, features = [
-    "http-listener",
+  "http-listener"
 ] }
 
 # misc
 hyper = "1.7"
+sha2 = { version = "0.10.9", features = ["sha2-asm"] }
 axum = { version = "0.8", default-features = false, features = [
-    "http1",
-    "json",
-    "tokio",
-    "tracing",
+  "http1",
+  "json",
+  "tokio",
+  "tracing"
 ] }
 wyhash = "0.6.0"
 mime = "0.3"
@@ -67,11 +64,8 @@ flate2 = { version = "1", features = ["zlib-rs"], default-features = false }
 reqwest = { version = "0.12", features = ["json"] }
 strum = "0.27"
 strum_macros = "0.27"
-<<<<<<< HEAD
 mini-moka = "0.10.3"
 
-=======
->>>>>>> 1b5d8b8 (refactor: use rbuilder-primitives)
 # Manually override cc version (conflict between alloy-consensus and rbuilder)
 cc = "=1.2.15"
 
