feat: introduce order deduplication cache

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ metrics-exporter-prometheus = { version = "0.17.2", default-features = false, fe
 
 # misc
 hyper = "1.7"
+sha2 = { version = "0.10.9", features = ["sha2-asm"] }
 axum = { version = "0.8", default-features = false, features = [
     "http1",
     "json",
@@ -63,6 +64,8 @@ flate2 = { version = "1", features = ["zlib-rs"], default-features = false }
 reqwest = { version = "0.12", features = ["json"] }
 strum = "0.27"
 strum_macros = "0.27"
+mini-moka = "0.10.3"
+
 # Manually override cc version (conflict between alloy-consensus and rbuilder)
 cc = "=1.2.15"
 
