--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ axum = { version = "0.8", default-features = false, features = [
   "tokio",
   "tracing"
 ] }
+wyhash = "0.6.0"
 mime = "0.3"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
