--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ revm-primitives = { version = "20.2.1", default-features = false }
 revm-interpreter = { version = "25.0.2", default-features = false }
 
 # rbuilder
-rbuilder-primitives = { git = "https://github.com/mempirate/rbuilder.git", branch = "refactor/extract-primitives" }
+rbuilder-primitives = { git = "https://github.com/flashbots/rbuilder.git", rev = "3f14f82" }
 
 # rt
 tokio = { version = "1", default-features = false, features = [
