--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,6 +74,12 @@ mini-moka = "0.10.3"
 cc = "=1.2.15"
 
 [dev-dependencies]
+derive_more = { version = "2.0.1" }
+clickhouse = { version = "0.13.3", features = [
+  "inserter",
+  "time",
+  "test-util"
+] }
 alloy-primitives = { version = "1.3.1", features = ["getrandom"] }
 uuid = { version = "1", features = ["v4"] }
 
