--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ metrics-exporter-prometheus = { version = "0.17.2", default-features = false, fe
 ] }
 
 # clickhouse
-clickhouse = { version = "0.13.3", features = ["inserter", "time"] }
+clickhouse = { version = "0.13.3", features = ["inserter", "time", "uuid"] }
 clickhouse-derive = { version = "0.2.0" }
 time = { version = "0.3.44" }
 
@@ -74,12 +74,13 @@ mini-moka = "0.10.3"
 cc = "=1.2.15"
 
 [dev-dependencies]
-derive_more = { version = "2.0.1" }
 clickhouse = { version = "0.13.3", features = [
   "inserter",
   "time",
-  "test-util"
+  "test-util",
+  "uuid"
 ] }
+derive_more = { version = "2.0.1" }
 alloy-primitives = { version = "1.3.1", features = ["getrandom"] }
 uuid = { version = "1", features = ["v4"] }
 
