--- a/simulation/buildernet.yaml
+++ b/simulation/buildernet.yaml
@@ -4,6 +4,9 @@ general:
 network:
   graph:
     type: 1_gbit_switch
+#    type: gml
+#    file:
+#      path: network-graph-2-zones.yaml
 
 hosts:
   proxy1:
