--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,6 +78,8 @@ mini-moka = "0.10.3"
 cc = "=1.2.15"
 
 [dev-dependencies]
+testcontainers = { version = "0.25.0" }
+testcontainers-modules = { version = "0.13.0", features = ["clickhouse"] }
 clickhouse = { git = "https://github.com/ClickHouse/clickhouse-rs", branch = "main", features = [
   "inserter",
   "time",
