--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,6 +64,7 @@ reqwest = { version = "0.12", features = ["json"] }
 strum = "0.27"
 strum_macros = "0.27"
 mini-moka = "0.10.3"
+rand = "0.9.2"
 
 # Manually override cc version (conflict between alloy-consensus and rbuilder)
 cc = "=1.2.15"
@@ -71,6 +72,11 @@ cc = "=1.2.15"
 [dev-dependencies]
 alloy-primitives = { version = "1.3.1", features = ["getrandom"] }
 uuid = { version = "1", features = ["v4"] }
+criterion = "0.7"
+
+[[bench]]
+name = "validation"
+harness = false
 
 # Speed up compilation time for dev builds by reducing emitted debug info.
 # NOTE: Debuggers may provide less useful information with this setting.
