chore: fix Cargo.toml warning

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -104,7 +104,9 @@ strip = "none"
 
 # Include debug info in benchmarks too.
 [profile.bench]
-inherits = "profiling"
+inherits = "release"
+debug = "full"
+strip = "none"
 
 [profile.maxperf]
 inherits = "release"
