--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,6 +64,7 @@ wyhash = "0.6.0"
 mime = "0.3"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+serde_bytes = { version = "0.11.19" }
 clap = { version = "4", features = ["derive", "env"] }
 eyre = "0.6"
 thiserror = "2"
