--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,6 +75,7 @@ reqwest = { version = "0.12", features = ["json"] }
 strum = "0.27"
 strum_macros = "0.27"
 mini-moka = "0.10.3"
+rand = "0.9.2"
 
 # Manually override cc version (conflict between alloy-consensus and rbuilder)
 cc = "=1.2.15"
@@ -91,6 +92,11 @@ clickhouse = { git = "https://github.com/ClickHouse/clickhouse-rs", branch = "ma
 derive_more = { version = "2.0.1" }
 alloy-primitives = { version = "1.3.1", features = ["getrandom"] }
 uuid = { version = "1", features = ["v4"] }
+criterion = "0.7"
+
+[[bench]]
+name = "validation"
+harness = false
 
 # Speed up compilation time for dev builds by reducing emitted debug info.
 # NOTE: Debuggers may provide less useful information with this setting.
@@ -124,7 +130,9 @@ strip = "none"
 
 # Include debug info in benchmarks too.
 [profile.bench]
-inherits = "profiling"
+inherits = "release"
+debug = "full"
+strip = "none"
 
 [profile.maxperf]
 inherits = "release"
