--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,6 +83,7 @@ rand = "0.9.2"
 cc = "=1.2.15"
 
 [dev-dependencies]
+tempfile = { version = "3.23.0" }
 testcontainers = { version = "0.25.0" }
 testcontainers-modules = { version = "0.13.0", features = ["clickhouse"] }
 clickhouse = { git = "https://github.com/ClickHouse/clickhouse-rs", branch = "main", features = [
