--- a/simulation/submitter/Cargo.toml
+++ b/simulation/submitter/Cargo.toml
@@ -8,6 +8,8 @@ alloy-primitives = { version = "1.3.1", features = ["serde"] }
 alloy-consensus = { version = "1.0.32", features = ["k256", "serde"] }
 alloy-eips = "1.0.32"
 alloy-rlp = "0.3.12"
+alloy-signer = "1.0.32"
+alloy-signer-local = "1.0.32"
 rbuilder-primitives = { git = "https://github.com/flashbots/rbuilder.git", rev = "3f14f82" }
 
 # rt
@@ -24,8 +26,12 @@ parquet = { version = "56.2", features = ["async"] }
 arrow = "56.2"
 hex = "0.4"
 
+reqwest = { version = "0.12", features = ["json"] }
 eyre = "0.6"
 uuid = { version = "1", features = ["serde"] }
+flume = "0.11"
+serde_json = "1"
+clap = { version = "4", features = ["derive", "env"] }
 
 # Manually override cc version (conflict between alloy-consensus and rbuilder)
 cc = "=1.2.15"
