--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ tokio = { version = "1", default-features = false, features = [
   "rt-multi-thread",
   "macros"
 ] }
+tokio-util = { version = "0.7.16" }
 futures = "0.3"
 
 # tracing
