--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,16 @@ metrics-exporter-prometheus = { version = "0.17.2", default-features = false, fe
   "http-listener"
 ] }
 
+# clickhouse
+clickhouse = { git = "https://github.com/ClickHouse/clickhouse-rs", branch = "main", features = [
+  "inserter",
+  "time",
+  "uuid",
+  "native-tls"
+] }
+clickhouse-derive = { version = "0.2.0" }
+time = { version = "0.3.44" }
+
 # misc
 hyper = "1.7"
 axum = { version = "0.8", default-features = false, features = [
@@ -54,6 +64,7 @@ wyhash = "0.6.0"
 mime = "0.3"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+serde_bytes = { version = "0.11.19" }
 clap = { version = "4", features = ["derive", "env"] }
 eyre = "0.6"
 thiserror = "2"
@@ -64,13 +75,28 @@ reqwest = { version = "0.12", features = ["json"] }
 strum = "0.27"
 strum_macros = "0.27"
 mini-moka = "0.10.3"
+rand = "0.9.2"
 
 # Manually override cc version (conflict between alloy-consensus and rbuilder)
 cc = "=1.2.15"
 
 [dev-dependencies]
+testcontainers = { version = "0.25.0" }
+testcontainers-modules = { version = "0.13.0", features = ["clickhouse"] }
+clickhouse = { git = "https://github.com/ClickHouse/clickhouse-rs", branch = "main", features = [
+  "inserter",
+  "time",
+  "test-util",
+  "uuid"
+] }
+derive_more = { version = "2.0.1" }
 alloy-primitives = { version = "1.3.1", features = ["getrandom"] }
 uuid = { version = "1", features = ["v4"] }
+criterion = "0.7"
+
+[[bench]]
+name = "validation"
+harness = false
 
 # Speed up compilation time for dev builds by reducing emitted debug info.
 # NOTE: Debuggers may provide less useful information with this setting.
@@ -104,7 +130,9 @@ strip = "none"
 
 # Include debug info in benchmarks too.
 [profile.bench]
-inherits = "profiling"
+inherits = "release"
+debug = "full"
+strip = "none"
 
 [profile.maxperf]
 inherits = "release"
