--- a/simulation/scenarios/buildernet.yaml
+++ b/simulation/scenarios/buildernet.yaml
@@ -21,7 +21,7 @@ hosts:
     network_node_id: 1
     processes:
     - path: /root/submitter
-      args: --url http://proxy3:9754 --path testdata.parquet --scale 1
+      args: --url http://proxy3:9754 --path testdata/testdata.parquet --scale 1
       start_time: 2s
       expected_final_state: running
   proxy1: &proxy-virginia
