--- a/simulation/justfile
+++ b/simulation/justfile
@@ -16,8 +16,8 @@ build:
 
 # Run a shadow simulation with the given scenario file, see list in scenarios/
 run scenario='buildernet.yaml': clean-container
-	docker run {{run-args}} --name {{container-name}} -v scenarios:/root/scenarios -it {{repo}}:{{image}} \
-		/bin/bash -c './shadow --template-directory /root/testdata/ {{scenario}}'
+	docker run {{run-args}} --name {{container-name}} -v ./scenarios:/root/scenarios:ro -it {{repo}}:{{image}} \
+		/bin/bash -c './shadow --template-directory /root/testdata/ scenarios/{{scenario}}'
 	@just get-results
 
 # Download the simulation results from the container
