--- a/simulation/scenarios/buildernet.yaml
+++ b/simulation/scenarios/buildernet.yaml
@@ -17,19 +17,25 @@ hosts:
     - path: /root/mockhub
       start_time: 0s
       expected_final_state: running
+  submitter:
+    network_node_id: 0
+    processes:
+    - path: /root/submitter
+      args: --path ../../../testdata.parquet --scale 1.0 --url http://proxy1:9754
+      start_time: 60s
   proxy1: &proxy-virginia
     network_node_id: 0
     processes:
     - path: /root/buildernet-orderflow-proxy
-      args: --user-listen-url 0.0.0.0:9754 --system-listen-url 0.0.0.0:9755 --builder-listen-url 0.0.0.0:8756 --builder-url http://0.0.0.0:2020 --builder-hub-url http://hub:3000
+      args: --user-listen-url 0.0.0.0:9754 --system-listen-url 0.0.0.0:9755 --builder-listen-url 0.0.0.0:8756 --builder-hub-url http://hub:3000
       start_time: 1s
       expected_final_state: running
-  proxy2: *proxy-virginia
-  proxy3: &proxy-frankfurt
+  proxy2: &proxy-frankfurt
     network_node_id: 1
     processes:
     - path: /root/buildernet-orderflow-proxy
-      args: --user-listen-url 0.0.0.0:9754 --system-listen-url 0.0.0.0:9755 --builder-listen-url 0.0.0.0:8756 --builder-url http://0.0.0.0:2020 --builder-hub-url http://hub:3000
+      args: --user-listen-url 0.0.0.0:9754 --system-listen-url 0.0.0.0:9755 --builder-listen-url 0.0.0.0:8756 --builder-hub-url http://hub:3000
       start_time: 1s
       expected_final_state: running
+  proxy3: *proxy-virginia
   proxy4: *proxy-frankfurt
