feat(simulation): 2 proxies sim

--- a/simulation/scenarios/buildernet.yaml
+++ b/simulation/scenarios/buildernet.yaml
@@ -33,7 +33,7 @@ hosts:
       expected_final_state: running
       environment:
         - RUST_LOG=debug
-  proxy2: *proxy-virginia
+  # proxy2: *proxy-virginia
   proxy3: &proxy-frankfurt
     network_node_id: 1
     processes:
@@ -41,4 +41,4 @@ hosts:
       args: --user-listen-url 0.0.0.0:9754 --system-listen-url 0.0.0.0:9755 --builder-listen-url 0.0.0.0:8756 --builder-hub-url http://hub:3000
       start_time: 1s
       expected_final_state: running
-  proxy4: *proxy-frankfurt
+  # proxy4: *proxy-frankfurt
