fix(simulation): env specification

--- a/simulation/scenarios/buildernet.yaml
+++ b/simulation/scenarios/buildernet.yaml
@@ -32,7 +32,7 @@ hosts:
       start_time: 1s
       expected_final_state: running
       environment:
-        - RUST_LOG=debug
+        RUST_LOG: debug
   # proxy2: *proxy-virginia
   proxy3: &proxy-frankfurt
     network_node_id: 1
