--- a/simulation/scenarios/buildernet.yaml
+++ b/simulation/scenarios/buildernet.yaml
@@ -26,7 +26,7 @@ hosts:
     - path: /root/submitter
       args: --url http://proxy3:9754 --path ../../../testdata/testdata.parquet --scale 1
       start_time: 2s
-      expected_final_state: exited
+      expected_final_state: running
   proxy1: &proxy-virginia
     network_node_id: 0
     processes:
