--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,7 @@ metrics-exporter-prometheus = { version = "0.17.2", default-features = false, fe
 # indexing
 arrow = { version = "56.2.0" }
 parquet = { version = "56.2.0" }
-clickhouse = { git = "https://github.com/ClickHouse/clickhouse-rs", branch = "main", features = [
+clickhouse = { git = "https://github.com/ClickHouse/clickhouse-rs", rev = "8cf3d2e138dd121367fa10e875d3f91374b075b2", features = [
   "inserter",
   "time",
   "uuid",
@@ -87,7 +87,7 @@ cc = "=1.2.15"
 tempfile = { version = "3.23.0" }
 testcontainers = { version = "0.25.0" }
 testcontainers-modules = { version = "0.13.0", features = ["clickhouse"] }
-clickhouse = { git = "https://github.com/ClickHouse/clickhouse-rs", branch = "main", features = [
+clickhouse = { git = "https://github.com/ClickHouse/clickhouse-rs", rev = "8cf3d2e138dd121367fa10e875d3f91374b075b2", features = [
   "inserter",
   "time",
   "test-util",
