feat(simulation): add log inspector commands

--- a/simulation/justfile
+++ b/simulation/justfile
@@ -25,6 +25,14 @@ get-results:
 	docker cp {{container-name}}:/root/shadow.data .
 	@echo 'Simulations results have been downloaded to shadow.data/'
 
+# View the logs of the given Shadow process
+logs process:
+	docker exec shadow bash -c 'cat shadow.data/hosts/{{process}}/*.1000.stdout' | less -R	
+
+# Tail the logs of the given Shadow process
+tail process:
+	docker exec shadow bash -c 'tail -f shadow.data/hosts/{{process}}/*.1000.stdout'
+
 # Delete the copied directory containing the simulation results
 clean-results:
 	rm -rf shadow.data
