--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ publish = false
 
 [dependencies]
 # alloy
-alloy-primitives = { version = "1.3.1", features = ["serde"] }
+alloy-primitives = { version = "1.3.1", features = ["serde", "rand"] }
 alloy-rlp = "0.3.12"
 alloy-consensus = { version = "1.0.32", features = ["k256", "serde"] }
 alloy-eips = "1.0.32"
@@ -18,7 +18,7 @@ revm-primitives = { version = "20.2.1", default-features = false }
 revm-interpreter = { version = "25.0.2", default-features = false }
 
 # rbuilder
-rbuilder-primitives = { git = "https://github.com/flashbots/rbuilder.git", rev = "3f14f82" }
+rbuilder-primitives = { git = "https://github.com/flashbots/rbuilder.git", rev = "02fe646" }
 
 # rt
 tokio = { version = "1", default-features = false, features = [
@@ -43,7 +43,7 @@ metrics-exporter-prometheus = { version = "0.17.2", default-features = false, fe
 ] }
 
 # clickhouse
-clickhouse = { git = "https://github.com/ClickHouse/clickhouse-rs", branch = "main", features = [
+clickhouse = { git = "https://github.com/ClickHouse/clickhouse-rs", rev = "8cf3d2e138dd121367fa10e875d3f91374b075b2", features = [
   "inserter",
   "time",
   "uuid",
@@ -83,7 +83,7 @@ cc = "=1.2.15"
 [dev-dependencies]
 testcontainers = { version = "0.25.0" }
 testcontainers-modules = { version = "0.13.0", features = ["clickhouse"] }
-clickhouse = { git = "https://github.com/ClickHouse/clickhouse-rs", branch = "main", features = [
+clickhouse = { git = "https://github.com/ClickHouse/clickhouse-rs", rev = "8cf3d2e138dd121367fa10e875d3f91374b075b2", features = [
   "inserter",
   "time",
   "test-util",
