--- a/simulation/submitter/Cargo.toml
+++ b/simulation/submitter/Cargo.toml
@@ -10,14 +10,14 @@ alloy-eips = "1.0.32"
 alloy-rlp = "0.3.12"
 alloy-signer = "1.0.32"
 alloy-signer-local = "1.0.32"
-rbuilder-primitives = { git = "https://github.com/flashbots/rbuilder.git", rev = "3f14f82" }
+rbuilder-primitives = { git = "https://github.com/flashbots/rbuilder.git", rev = "02fe646" }
 
 # rt
 tokio = { version = "1", default-features = false, features = [
-    "sync",
-    "time",
-    "rt-multi-thread",
-    "macros",
+  "sync",
+  "time",
+  "rt-multi-thread",
+  "macros"
 ] }
 futures = "0.3"
 
