--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,8 @@ tokio = { version = "1", default-features = false, features = [
   "macros"
 ] }
 tokio-util = { version = "0.7.16" }
-futures = "0.3"
+futures = { version = "0.3" }
+futures-util = { version = "0.3.31" }
 
 # tracing
 tracing = "0.1"
