--- a/simulation/submitter/Cargo.toml
+++ b/simulation/submitter/Cargo.toml
@@ -17,7 +17,7 @@ tokio = { version = "1", default-features = false, features = [
   "sync",
   "time",
   "rt-multi-thread",
-  "macros"
+  "macros",
 ] }
 futures = "0.3"
 
@@ -32,6 +32,7 @@ uuid = { version = "1", features = ["serde"] }
 flume = "0.11"
 serde_json = "1"
 clap = { version = "4", features = ["derive", "env"] }
+time = "0.3"
 
 # Manually override cc version (conflict between alloy-consensus and rbuilder)
 cc = "=1.2.15"
