feat(indexer): Parquet support (#23)
Introduces support for bundle receipt indexing via parquet file,
configurable using `indexer.parquet.bundle-receipts-file-path` flag.
Parquet indexing is currently incompatible with Clickhouse indexing,
meaning that only one of the two can be chosen. File-based indexing has
been introduce for Shadow simulation support, because the isolated
network cannot talk with external servers (like Clickhouse).

**Limitations**

Parquet file format requires a writer to close the file before it can be
read successfully. The reason is that when the writer closes the file,
it flushes also a footer containing the metadata of what has been
written. As such, inspecting the resulting parquet files implies the
orderflow proxy indexing tasks must have been stopped.

To overcome this limitation, usually a file-rotation mechanism is
employed, where a new file is created every minuted/hour/etc. For now,
it is still TBD whether we want to go with this approach or we would
migrate to something simpler like CSV.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ tokio = { version = "1", default-features = false, features = [
   "rt-multi-thread",
   "macros"
 ] }
+tokio-util = { version = "0.7.16" }
 futures = "0.3"
 
 # tracing
@@ -42,8 +43,10 @@ metrics-exporter-prometheus = { version = "0.17.2", default-features = false, fe
   "http-listener"
 ] }
 
-# clickhouse
-clickhouse = { git = "https://github.com/ClickHouse/clickhouse-rs", branch = "main", features = [
+# indexing
+arrow = { version = "56.2.0" }
+parquet = { version = "56.2.0" }
+clickhouse = { git = "https://github.com/ClickHouse/clickhouse-rs", rev = "8cf3d2e138dd121367fa10e875d3f91374b075b2", features = [
   "inserter",
   "time",
   "uuid",
@@ -81,9 +84,10 @@ rand = "0.9.2"
 cc = "=1.2.15"
 
 [dev-dependencies]
+tempfile = { version = "3.23.0" }
 testcontainers = { version = "0.25.0" }
 testcontainers-modules = { version = "0.13.0", features = ["clickhouse"] }
-clickhouse = { git = "https://github.com/ClickHouse/clickhouse-rs", branch = "main", features = [
+clickhouse = { git = "https://github.com/ClickHouse/clickhouse-rs", rev = "8cf3d2e138dd121367fa10e875d3f91374b075b2", features = [
   "inserter",
   "time",
   "test-util",
